<resources>
    <string name="app_name">Фитнес-трекер</string>
    <string name="todo">TODO</string>
    <string name="have_account">Уже есть аккаунт?</string>
    <string name="registration">Зарегистрироваться</string>
    <string name="created_students">Созданный студентами</string>
    <string name="best_tracker">Пожалуй, лучший фитнес трекер в ДВФУ</string>
    <string name="agreement">Нажимая на кнопку, вы соглашаетесь с политикой конфиденциальности и обработки персональных данных, а также принимаете пользовательское соглашение</string>
    <string name="login">Логин</string>
    <string name="nameOrNik">Имя или никнейм</string>
    <string name="password">Пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="sex">Пол</string>
    <string name="other">Другое</string>
    <string name="woman">Женщина</string>
    <string name="man">Мужчина</string>
    <string name="login_text">Войти</string>
    <string name="activity">Активность</string>
    <string name="profile">Профиль</string>
    <string name="menu_save">Сохранить</string>

    <string name="hint_password">Пароль</string>
    <string name="hint_login">Логин</string>
    <string name="change_password">Изменить пароль</string>
    <string name="hint_name_nickname">Имя или никнейм</string>
    <string name="hint_again_password">Повторите пароль</string>
    <string name="exit">Выйти</string>

    <string name="my_tab_name">Моя</string>
    <string name="users_tab_name">Пользователи</string>

    <string name="van_darkholme">\@van_darkholme</string>

    <string name="workout_time">Время потренить</string>
    <string name="tap_text">Нажимай на кнопку ниже и начинаем трекать активность</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>